# khatabook

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.rst  db.sqlite3  pyproject.toml
core/config/: asgi.py  urls.py  wsgi.py
core/config/settings/: __init__.py  base.py  custom.py  envars.py
core/config/settings/templates/: settings.dev.py  settings_example.dev.py
core/core/utils/: collections.py  collections_utl.py  misc.py  settings.py
khata_core/accounts/: admin.py  email_send.py  encryption.py  forms.py  models.py  urls.py  utils.py  views.py
khata_core/accounts/templates/authentication/: base.html  change-number.html  change_password.html  email-verify.html  login.html  password_reset.html  profile.html  recover_password.html  signup.html  (+1 more)
khata_core/expenses/: admin.py  models.py  urls.py  views.py
khata_core/general/: mixins.py  models.py  utils.py
khata_core/income/: admin.py  models.py  tests.py
khata_core/project/: urls.py
khata_core/project/settings/: __init__.py  base.py  custom.py  envars.py  logging_cstm.py
khata_core/utils/: settings_utl.py
local/: settings.dev.py
static/assets2/css/: animsition.css  app.min.css  custom.css  editedstyle.css  waves.css
static/assets2/js/: checkDateType.js  custom.js  password_validation.js
templates/: index.html
templates/base/: css.html  header.html  index.html  js.html  pagination.html  sidebar.html
templates/mail/: password-reset.html  signup.html
templates/partials/: base.html  content.html  css.html  footer.html  header.html  javascript.html  sidebar.html
(+2 files in other folders)
