[tool.poetry]
name = "khatabook-v1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.9"
django-filter = "^24.2"
django-split-settings = "^1.3.1"
pyyaml = "^6.0.1"
importlib-metadata = "4.13.0"
pillow = "^10.4.0"
fernet = "^1.0.1"
python-dateutil = "^2.9.0.post0"
cryptography = "^42.0.8"
redis = "^5.0.7"
django-crispy-forms = "^2.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
